# PhysicsBox

./: .gitignore  Cargo.toml  GOAL.md  README.md  pyproject.toml
docs/: FEATURES_ROADMAP.md  PHYSICS_ROADMAP.md  README.md  RENDERING_ROADMAP.md  complex-rendering.md  instagram-rendering.md  installation.md  sample-rendering.md  scene-setup.md
examples/: ball_cannon.py  cube_pyramid.py  cube_rain.py  cube_tower.py  domino_destruction.py  falling_cubes.py  instagram_4k_test.py  instagram_physics_test.py  multiball_chaos.py  quick_test.py  scene10_ultimate_chaos.py  scene11_200k_cube_volume.py  scene1_simple_tower.py  scene2_pyramid_assault.py  scene3_fortress_siege.py  scene4_city_destruction.py  scene5_mega_avalanche.py  scene6_mega_stadium.py  scene7_domino_apocalypse.py  scene8_skyscraper_armageddon.py  scene9_cube_tsunami.py  wrecking_balls.py
python/physobx/: __init__.py
rust/physobx-core/: Cargo.toml
rust/physobx-core/shaders/: cube_instance.wgsl  fullscreen.wgsl  ground.wgsl  shadow_depth.wgsl  sphere_instance.wgsl  tonemap.wgsl
rust/physobx-core/src/: lib.rs  simulator.rs
rust/physobx-core/src/gpu/: camera.rs  context.rs  ground_renderer.rs  instance_renderer.rs  mod.rs  render_target.rs  renderer.rs  shadow.rs  sky_renderer.rs  sphere_renderer.rs  tonemap.rs
rust/physobx-core/src/physics/: mod.rs  rapier_bridge.rs  storage.rs
rust/physobx-core/src/scene/: builder.rs  mod.rs
rust/physobx-python/: Cargo.toml
rust/physobx-python/src/: lib.rs
scripts/: frames_to_video.sh  render_all.py
