[package]
name = "physobx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core physics simulation and rendering library for Physobx"

[dependencies]
# Physics
rapier3d.workspace = true
nalgebra.workspace = true

# GPU
wgpu.workspace = true
bytemuck.workspace = true
pollster.workspace = true

# Image
image.workspace = true

# Utilities
rayon.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true

# [dev-dependencies]
# criterion = "0.5"

# [[bench]]
# name = "physics"
# harness = false
